cabal-version:      2.4
name:               march
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

executable march
  main-is:          Main.hs
  build-depends:    
    base ^>=4.16.2.0,
    commonmark,
    commonmark-pandoc,
    directory,
    dlist,
    filepath,
    mtl,
    optparse-applicative,
    pandoc-types,
    text
  hs-source-dirs:   app
  default-language: Haskell2010
